--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -25,12 +24,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "config.json": "^0.0.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.6.4",
     "material": "^0.4.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "rootpath": "^0.1.2",
     "rxjs": "~7.5.0",
+    "sequelize": "^6.25.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
